<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.registrdigitalizace</groupId>
    <artifactId>soapclient</artifactId>
    <version>1.2</version>
    <packaging>jar</packaging>
    <name>Digitization Registry SOAP Client</name>
    <url>http://code.google.com/p/registrdigitalizace/</url>
    
    <licenses>
        <license>
            <name>GNU General Public License</name>
            <url>http://www.gnu.org/licenses/gpl.html</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://code.google.com/p/registrdigitalizace.soapclient</connection>
        <developerConnection>scm:git:https://code.google.com/p/registrdigitalizace.soapclient</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- JAX-WS 2.2 JDK 1.6 support -->
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
            <version>2.2.6-2</version>
        </dependency>

        <!-- tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jvnet.jax-ws-commons</groupId>
                <artifactId>jaxws-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <wsdlDirectory>src/main/resources/wsdl</wsdlDirectory>
                    <wsdlLocation>/wsdl/DigitizationRegistryService.wsdl</wsdlLocation>
                    <!--<wsdlLocation>http://registrdigitalizace.cz/soapservices/DigitizationRegistryService?wsdl</wsdlLocation>-->
                    <xnocompile>false</xnocompile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>wsimport</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- JAX-WS 2.2 JDK 1.6 support -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <!-- need JAXB API and JAX-WS API in an endorsed dir-->
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax.xml.bind</groupId>
                                    <artifactId>jaxb-api</artifactId>
                                    <version>2.2.6</version>
                                    <type>jar</type>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>javax.xml.ws</groupId>
                                    <artifactId>jaxws-api</artifactId>
                                    <version>2.2.8</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                        
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <showDeprecation>true</showDeprecation>
                    <compilerArguments>
                        <!-- tell compiler to use endorsed dir -->
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
                <configuration>
                    <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
                    <systemPropertyVariables>
                        <!-- set with -Dcz.registrdigitalizace.soapclient.url=URL or declare profile in settings.xml -->
                        <cz.registrdigitalizace.soapclient.url>${cz.registrdigitalizace.soapclient.url}</cz.registrdigitalizace.soapclient.url>
                        <cz.registrdigitalizace.soapclient.user>${cz.registrdigitalizace.soapclient.user}</cz.registrdigitalizace.soapclient.user>
                        <cz.registrdigitalizace.soapclient.passwd>${cz.registrdigitalizace.soapclient.passwd}</cz.registrdigitalizace.soapclient.passwd>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Version>build${project.version}-rev${buildNumber}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
